--- a/contact.html
+++ b/contact.html
@@ -24,14 +24,35 @@
           </ul>
         </div>
       </nav>
-      <div class="con-2">
-        <h1>Contact Me</h1>
-        <h3>You Can Contact Me in My Social Media Platform Here:</h3>
+
+  <form action="https://formspree.io/f/xoqoypdn" method="POST">
+    <div class="title">
+      <h5>CONTACT</h5>
+    </div>
+    <div class="half">
+      <div class="item">
+        <label for="name">NAME</label>
+        <input type="text" id="name">
       </div>
-      <div class="social-container">
-        <button><i onclick="location.href='https://web.facebook.com/c0d3xxx'" class="fa-brands fa-facebook"></i></button>
-        <button><i onclick="location.href='https://github.com/jeremymalana'" class="fa-brands fa-github"></i></button>
-        <button><i onclick="location.href='https://sshlocalhostx64@gmail.com'" class="fa-solid fa-envelope"></i></button>
+      <div class="item">
+        <label for="email">EMAIL</label>
+        <input type="text" type="email" name="email" id="email">
       </div>
+    </div>
+    <div class="full">
+      <label for="message">MESSAGE</label>
+      <textarea name="message" id="message"></textarea>
+    </div>
+    <div class="action">
+      <input type="submit" value="SEND MESSAGE">
+      <input type="reset" value="RESET">
+    </div>
+    <div class="icons">
+      <a href="https://twitter.com/jeremy_l8r" class="fa-brands fa-twitter"></a>
+      <a href="https://web.facebook.com/c0d3xxx" class="fa-brands fa-facebook"></a>
+      <a href="https://www.instagram.com/jeremy.l8r" class ="fa-brands fa-instagram"></a>
+      <a href="https://github.com/jeremymalana" class="fa-brands fa-github"></a>
+    </div>
+  </form>
 </body>
 </html>
