--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
           <h1 class="title">
             I'm <span>Jeremy<br/></span>a <span class="auto-type">Stu.Web-Developer</span>
           </h1>
+          <h4>Made by Jeremy Malana © 2023</h4>
       </div>
     </section>
 
