--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
           <h1 class="title">
             I'm <span>Jeremy<br/></span>a <span class="auto-type">Stu.Web-Developer</span>
           </h1>
-          <h4>Made by Jeremy Malana © 2023</h4>
+          <div class="made"><h4>Made by Jeremy Malana © 2023</h4></div>
       </div>
-    </section>
+    </div>
 
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
